tests/NormalTests/paczka1/fuzzy1/79138501.err
Error in line 6: J8Z92ve A222 361,20
Error in line 4: J8Z92ve A222 91,4
Error in line 22: S435 S435 -1,5
Error in line 23: hM48Y A709 26,6
Error in line 25: WAWmUOje A709 14,3
